lab3/manifest_lab3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-itdt
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-itdt
  template:
    metadata:
      labels:
        app: my-itdt
    spec:
      containers:
      - name: my-itdt
        image: ifilyaninitmo/itdt-contained-frontend:master
        ports:
        - name: my-itdt-port
          containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: my-itdt
spec:
  type: NodePort
  selector:
    app: my-itdt
  ports:
  - port: 3000
    targetPort: my-itdt-port
