lab3/ingress-manifest.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-itdt-ingress
spec:
  tls:
  - hosts:
    - my-itdt.hrenaki
    secretName: my-tls
  rules:
  - host: my-itdt.hrenaki
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-itdt
            port:
              number: 3000
